--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,27 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_centerInParent="true">
+                    <com.robinhood.ticker.TickerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="50sp"
+                        android:textColor="@color/colorAccent"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        app:ticker_defaultCharacterList="number"
+                        android:id="@+id/no_of_police"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Police Near You"
+                        android:textStyle="bold"
+                        android:textSize="25dp"/>
+                </LinearLayout>
             </RelativeLayout>
         </com.yarolegovich.mp.MaterialPreferenceScreen>
         <com.yarolegovich.mp.MaterialPreferenceScreen
